--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 
     <h1>Hello World</h1>
     
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora at sunt nisi culpa hic voluptate magnam quisquam, aliquam est tempore dolorum quasi saepe adipisci repellat repellendus quaerat. Repudiandae, iusto itaque!</p>
 </body>
 </html>
